--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,5 +18,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: -apple-system, "system-ui", "Segoe UI Adjusted", "Segoe UI", "Liberation Sans", sans-serif;
+  font-family:
+    -apple-system, "system-ui", "Segoe UI Adjusted", "Segoe UI",
+    "Liberation Sans", sans-serif;
 }
