--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,7 @@ body {
     -apple-system, "system-ui", "Segoe UI Adjusted", "Segoe UI",
     "Liberation Sans", sans-serif;
 }
+
+.markdown a {
+  @apply text-blue-600 hover:text-blue-800 underline;
+}
